# GPU-programming

./: .gitignore  .pre-commit-config.yaml  README.md  gpu_programming.pptx
docs/: README.md
environments/: .gitignore  README.md  environment.yml  kokkos.py  nvidia_hpc.py  oneapi_hpc.py
slides-source/: .gitignore  _quarto.yml  gpu_programming.qmd  preview.sh
slides-source/kokkos/: diagrams.pptx  execution_patterns.qmd  hello_world.qmd  kernels.qmd  kokkos.qmd  library.qmd  references.qmd  teams.qmd  tools.qmd  views.qmd
slides-source/openmp/: openmp.qmd
source-code/: .gitignore  README.md  saxpy.cu
source-code/cuda/: CMakeLists.txt  README.md  saxpy.cu
source-code/kokkos/: CMakeLists.txt  README.md  atomics.cpp  common.cmake  device.cpp  exec_space_config.cpp  hello_world.cpp  hello_world_lambdas.cpp  host_to_host_deepcopy.cpp  layouts.cpp  matrix_matrix.cpp  matrix_vector.cpp  min_reductor.cpp  parallel_filter.cpp  parallel_scan.cpp  pi.cpp  random_numbers.cpp  reduce_vs_atomics.cpp  single.cpp  subviews.cpp  teams.cpp  vector_product.cpp  vector_product_lambdas.cpp
source-code/kokkos/cuda_required/: README.md  layouts.cpp
source-code/kokkos/dualview/: README.md  dual_view.cpp
source-code/kokkos/gemm/: CMakeLists.txt  README.md  matrix_matrix.cpp  matrix_matrix_cpu.cpp  matrix_matrix_teams.cpp
source-code/kokkos/gemv/: README.md  matrix_vector.cpp  matrix_vector_cpu.cpp  matrix_vector_teams.cpp  matrix_vector_teams_layout_right.cpp
source-code/kokkos/multiple_exec_spaces/: multiple_exec_spaces.cpp
source-code/kokkos/random_walks/: CMakeLists.txt  README.md  random_walks.cpp  random_walks_scatter_view.cpp
source-code/kokkos/scratch/: README.md  contract_data_field_scalar.cpp  contract_data_field_scalar_mdrange.cpp  contract_data_field_scalar_scratch.cpp  contract_data_field_scalar_teams.cpp  contract_data_field_scalar_teams_vector.cpp
source-code/kokkos/tasking/: CMakeLists.txt  README.md  fib.cpp
source-code/openmp/: CMakeLists.txt  README.md  device_allocation_declare_gpu.c  device_allocation_gpu.c  devices.c  heat_gpu.c  hello_world.c  julia_omp_cpu.c  julia_omp_cpu.cpp  julia_omp_gpu.c  julia_omp_target_declare.c  julia_set_par_unseq.cpp  julia_set_seq.cpp  plot_julia.sh  structure_data_region_gpu.c  structured_data_region_gpu.c  teams_cpu.c  unstructured_data_region_gpu.c  vector_product_2_cpu.c  vector_product_2_gpu.c  vector_product_3_gpu.c  vector_product_cpu.c  vector_product_gpu.c  vector_product_no_distribute_gpu.c  vector_product_parallel_for_gpu.c
source-code/openmp/compiler_issues/: CMakeLists.txt  README.md  device_allocation_gpu.c  julia_omp_target_declare.c
source-code/serial/: CMakeLists.txt  README.md  julia.c  molecular_dynamics.cpp  random_walks.cpp  sort_data.cpp  vector_product_cpu.c
source-code/serial/contract_data_field_scalar/: CMakeLists.txt  contract_data_field_scalar.cpp
source-code/serial/molecular-dynamics/: CMakeLists.txt  README.md  abstract_measures.cpp  abstract_measures.h  cli.cpp  cli.h  data_types.cpp  data_types.h  main.cpp  measures.cpp  measures.h  particles.cpp  particles.h  show_data.py  show_two_particle_data.py  simulation.cpp  simulation.h  statistics.h  stepper.cpp  stepper.h  two_particles.cpp
source-code/stl/: CMakeLists.txt  README.md  julia_set_par.cpp  sort_data.cpp
source-code/thrust/: CMakeLists.txt  README.md  saxpy.cu  sum.cu  vectors.cu
